feat(msp): internationalization-collaboration in msp:collaboration

--- a/locales/en.json
+++ b/locales/en.json
@@ -120,6 +120,7 @@
     "Date": "Date",
     "December": "December",
     "Default value": "Default value",
+    "Delete": "Delete",
     "Deployment": "Deployment",
     "Deployment details": "Deployment details",
     "Deployment log": "Deployment log",
@@ -260,10 +261,11 @@
     "Number of versions": "Number of versions",
     "O&M Alert": "O&M Alert",
     "O&M Report": "O&M Report",
+    "OK": "OK",
     "October": "October",
-    "Ok": "Ok",
     "On this page, you can check the progress of my application to call the API request, and its specific authentication information after the application is approved.": "On this page, you can check the processing progress of my application to call the API request, and the specific authentication information of the API call after the application is passed.",
     "Only one channel of the same type can be enabled. Enabled channels will be used to send notification messages of the corresponding type.": "Only one channel of the same type can be enabled. Enabled channels will be used to send notification messages of the corresponding type.",
+    "Operations": "Operations",
     "Operator": "Operator",
     "Org": "Org",
     "Other settings": "Other settings",
@@ -284,6 +286,7 @@
     "Pipelines": "Pipelines",
     "Platform": "Platform",
     "Please Select": "Please Select",
+    "Please enter": "Please enter",
     "Please enter a valid version number, such as x.y.z.": "please enter a valid version number，such as x.y.z",
     "Please enter address started with http": "please enter a valid instance address starting with http:// or https://",
     "Please enter the IPv4 list, separated by comma.": "Please enter the IPv4 list, separated by comma.",
@@ -352,6 +355,7 @@
     "SMS signature": "SMS signature",
     "Sat": "Sat",
     "Save": "Save",
+    "Search": "Search",
     "Search by keyword": "Search by keyword",
     "Search by keyword-char": "Search by keyword",
     "Search by name": "Search by name",
@@ -370,6 +374,7 @@
     "Setting": "Setting",
     "Settings": "Settings",
     "Settings-org": "settings",
+    "Settings-project": "Settings",
     "Shanghai": "Shanghai",
     "Shenzhen": "Shenzhen",
     "Silence period policy": "Silence period policy",
@@ -552,12 +557,12 @@
     "configuration information": "configuration information",
     "configuration mode": "configuration mode",
     "configuration upgrade": "configuration upgrade",
-    "confirm deletion": "confirm deletion",
     "confirm password": "confirm password",
     "confirm remove relation?": "confirm remove relation?",
     "confirm the new password": "confirm the new password",
     "confirm to delete the current API resource?": "confirm to delete the current API resource?",
     "confirm to delete the current version?": "confirm to delete the current version?",
+    "confirm to deletion": "confirm to deletion",
     "confirm to go offline": "confirm to go offline",
     "confirm to go online": "confirm to go online",
     "confirm to read all": "confirm to read all",
@@ -985,8 +990,10 @@
     "{name} can not empty": "{name} can not empty",
     "{name} format": "{name} format",
     "{name} identifier": "{name} identifier",
+    "{name} items selected": "{name} items selected",
     "{name} member management": "{name} member management",
     "{name} title": "{name} title",
+    "{num} issues": "{num} issues",
     "{num} month(s)": "{num} month(s)",
     "{num} year(s)": "{num} year(s)",
     "{num} {type}": "{num} {type}",
