--- a/locales/zh.json
+++ b/locales/zh.json
@@ -120,6 +120,7 @@
     "Date": "日期",
     "December": "12月",
     "Default value": "默认值",
+    "Delete": "删除",
     "Deployment": "部署",
     "Deployment details": "部署详情",
     "Deployment log": "部署日志",
@@ -260,10 +261,11 @@
     "Number of versions": "版本数",
     "O&M Alert": "运维告警",
     "O&M Report": "运维报告",
+    "OK": "确定",
     "October": "10月",
-    "Ok": "确定",
     "On this page, you can check the progress of my application to call the API request, and its specific authentication information after the application is approved.": "本页面中可以及时查看我申请调用 API 请求的处理进度，以及申请通过后 API 调用的具体认证信息",
     "Only one channel of the same type can be enabled. Enabled channels will be used to send notification messages of the corresponding type.": "同一类型下只能有一个开启的渠道，启用中的渠道将用于发送对应类型的通知消息",
+    "Operations": "操作",
     "Operator": "操作人",
     "Org": "组织",
     "Other settings": "其他设置",
@@ -284,6 +286,7 @@
     "Pipelines": "流水线",
     "Platform": "平台",
     "Please Select": "请选择",
+    "Please enter": "请输入",
     "Please enter a valid version number, such as x.y.z.": "请输入有效的版本号, 如：x.y.z",
     "Please enter address started with http": "请输入以http://或https://开头的有效实例地址",
     "Please enter the IPv4 list, separated by comma.": "请输入IPv4列表，多个时以逗号分割",
@@ -352,6 +355,7 @@
     "SMS signature": "短信签名",
     "Sat": "六",
     "Save": "保存",
+    "Search": "搜索",
     "Search by keyword": "输入关键词搜索",
     "Search by keyword-char": "搜索关键字",
     "Search by name": "按名称搜索",
@@ -370,6 +374,7 @@
     "Setting": "设置",
     "Settings": "设置",
     "Settings-org": "组织设置",
+    "Settings-project": "项目设置",
     "Shanghai": "上海",
     "Shenzhen": "深圳",
     "Silence period policy": "沉默周期策略",
@@ -552,12 +557,12 @@
     "configuration information": "配置信息",
     "configuration mode": "配置模式",
     "configuration upgrade": "配置更新",
-    "confirm deletion": "确定删除",
     "confirm password": "确认密码",
     "confirm remove relation?": "确认解除关联？",
     "confirm the new password": "确认新密码",
     "confirm to delete the current API resource?": "确认删除当前API资源？",
     "confirm to delete the current version?": "确认删除当前版本？",
+    "confirm to deletion": "确定删除",
     "confirm to go offline": "确认下线",
     "confirm to go online": "确认上线",
     "confirm to read all": "确认一键已读？",
@@ -985,8 +990,10 @@
     "{name} can not empty": "{name}不可为空",
     "{name} format": "{name} 格式",
     "{name} identifier": "{name}标识",
+    "{name} items selected": "已选择 {name} 项",
     "{name} member management": "{name}成员管理",
     "{name} title": "{name}标题",
+    "{num} issues": "{num}个事项",
     "{num} month(s)": "{num}个月",
     "{num} year(s)": "{num}年",
     "{num} {type}": "{num}个{type}",
