--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -685,6 +685,7 @@
     "Next": "Next",
     "No": "No",
     "No data": "No data",
+    "No permission to operate": "No permission to operate",
     "None": "None",
     "OK": "OK",
     "Other Type": "Other Type",
@@ -776,7 +777,6 @@
     "name length is too long": "name length is too long",
     "new use case": "new use case",
     "no permission": "no permission",
-    "no permission to operate": "no permission to operate",
     "organization": "organization",
     "please": "please ",
     "please complete Dingding address and signature": "please complete Dingding address and signature",
@@ -880,6 +880,7 @@
     "Branch Rule": "Branch Rule",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.",
     "Branch protection": "Branch protection",
+    "Briefly describe your project. Please go to": "Briefly describe your project. Please go to",
     "Build details": "Build details",
     "Built-in code base": "Built-in code base",
     "Business app": "Business app",
@@ -1019,6 +1020,7 @@
     "Generate Test Report": "Generate Test Report",
     "Git reference": "Git reference",
     "Go to the newly created document?": "Go to the newly created document?",
+    "Goal": "Goal",
     "Greater than or equal to": "Greater than or equal to",
     "Group": "Group",
     "Help you better manage your notifications": "Help you better manage your notifications",
@@ -1211,6 +1213,7 @@
     "Start Deployment": "Start Deployment",
     "Start Interface Test": "Start Interface Test",
     "Statistics": "Statistics",
+    "Status": "Status",
     "Status settings": "Status settings",
     "Status type": "Status type",
     "Steps and results": "Steps and results",
@@ -1219,7 +1222,6 @@
     "Switch organization": "Switch organization",
     "System": "System",
     "System built-in Git repository": "System built-in Git repository",
-    "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "Tell about your project in one sentence, so that more people can quickly understand your project, go to",
     "Terminated": "Terminated",
     "Test Case": "Test Case",
     "Test Report": "Test Report",
@@ -1232,7 +1234,6 @@
     "Test set": "Test set",
     "Test statistics": "Test statistics",
     "Test summary": "Test summary",
-    "Testcase": "Testcase",
     "Testing Reports": "Testing Reports",
     "The app branch rule is mainly to protect the app code branch and set switches for continuous integration. Please configure it as needed.": "The app branch rule is mainly to protect the app code branch and set switches for continuous integration. Please configure it as needed.",
     "The application cannot be restored after deletion.Please enter {name} to confirm.": "after the application is deleted, it cannot be restored. please enter {name} to confirm",
@@ -1278,6 +1279,7 @@
     "Trigger timing": "Trigger timing",
     "Type-artifact": "Type-artifact",
     "Type-issue": "Type",
+    "Unarchive": "Unarchive",
     "Unfinished iteration": "Unfinished iteration",
     "Unfollow": "Unfollow",
     "Unspecified": "Unspecified",
@@ -1514,7 +1516,7 @@
     "edit test plan": "edit test plan",
     "edit to check": "edit to check",
     "empty, not empty": "Empty, Not empty",
-    "empty-markdown-content": "\n### readme\n\n\n*Here you can show your talents on documentation*\n\n*to let members know the background, goals and other information of the project via awesome graph and text*\n\n*to share project documents, specifications and other materials*\n\n*and also...*",
+    "empty-markdown-content": "\n### Readme\n\n\n*Here you can show your talents in documentation,*\n\n*to let members know the background, goals, and other information of the project via awesome graphs and text,*\n\n*to share project documents, specifications, and other materials,*\n\n*and more.*",
     "encrypted files cannot be downloaded": "encrypted files cannot be downloaded",
     "end date": "end date",
     "enter branch name to filter": "enter branch name to filter",
@@ -1599,6 +1601,7 @@
     "iteration": "iteration",
     "iteration goal": "iteration goal",
     "Job": "Job",
+    "iterations": "iterations",
     "jump to code": "jump to code",
     "just add new features": "just add new features",
     "jvm process info": "jvm process info",
@@ -1791,7 +1794,6 @@
     "relation added successfully": "relation added successfully",
     "release associated label will be deleted, confirm to delete?": "release associated label will be deleted, confirm to delete?",
     "release name": "release name",
-    "release relationship": "release relationship",
     "reopen": "reopen",
     "repeat number of lines": "repeat number of lines",
     "reply": "reply",
@@ -1977,7 +1979,7 @@
     "your browser does not support WebSocket!": "your browser does not support WebSocket!",
     "{app}: {branch}, gets new pipelines {time}": "{app}: {branch}, gets new pipelines {time}",
     "{num} followers": "{num} followers",
-    "{num} members are following": "{num} members are following"
+    "{num} followers-ing": "{num} followers"
   },
   "ecp": {
     "Configuration": "Configuration",
