--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -685,6 +685,7 @@
     "Next": "下一个",
     "No": "否",
     "No data": "暂无数据",
+    "No permission to operate": "您暂无权限进行此操作",
     "None": "暂无",
     "OK": "确认",
     "Other Type": "其他类型",
@@ -776,7 +777,6 @@
     "name length is too long": "命名长度过长",
     "new use case": "新建用例",
     "no permission": "无权限",
-    "no permission to operate": "您暂无权限进行此操作",
     "organization": "组织名称",
     "please": "请",
     "please complete Dingding address and signature": "请完整填写钉钉地址和签名",
@@ -880,6 +880,7 @@
     "Branch Rule": "分支规则",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "平台中分支绑定环境，该分支代码通过平台 CI/CD 流水线后仅能部署到下面选择的环境中",
     "Branch protection": "分支保护",
+    "Briefly describe your project. Please go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
     "Build details": "构建详情",
     "Built-in code base": "内置代码库",
     "Business app": "业务应用",
@@ -1019,6 +1020,7 @@
     "Generate Test Report": "生成测试报告",
     "Git reference": "Git 引用",
     "Go to the newly created document?": "是否跳转至新建的文档",
+    "Goal": "迭代目标",
     "Greater than or equal to": "大于等于",
     "Group": "分组",
     "Help you better manage your notifications": "帮助您更好地组织通知项",
@@ -1211,6 +1213,7 @@
     "Start Deployment": "开始部署",
     "Start Interface Test": "执行接口测试",
     "Statistics": "统计",
+    "Status": "状态",
     "Status settings": "状态设置",
     "Status type": "状态类型",
     "Steps and results": "步骤及结果",
@@ -1219,19 +1222,18 @@
     "Switch organization": "切换组织",
     "System": "系统",
     "System built-in Git repository": "系统内置Git仓库",
-    "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
     "Terminated": "终止",
     "Test Case": "测试用例",
     "Test Report": "测试报告",
     "Test Reports": "测试报告",
     "Test Statistics": "测试统计",
+    "Test case": "测试用例",
     "Test output": "测试输出",
     "Test pass rate": "测试通过率",
     "Test report details": "测试报告详情",
     "Test set": "测试集",
     "Test statistics": "测试统计",
     "Test summary": "测试总结",
-    "Testcase": "用例",
     "Testing Reports": "测试报告",
     "The app branch rule is mainly to protect the app code branch and set switches for continuous integration. Please configure it as needed.": "应用分支规则主要是对应用代码分支的保护和持续集成的开关设置，请根据应用实际需要合理配置。",
     "The application cannot be restored after deletion.Please enter {name} to confirm.": "应用删除后无法恢复，请输入 {name} 进行确认",
@@ -1277,6 +1279,7 @@
     "Trigger timing": "触发时机",
     "Type-artifact": "制品类型",
     "Type-issue": "事项类型",
+    "Unarchive": "取消归档",
     "Unfinished iteration": "未完成迭代",
     "Unfollow": "取消关注",
     "Unspecified": "未指定",
@@ -1598,6 +1601,7 @@
     "iteration": "迭代",
     "iteration goal": "迭代目标",
     "Job": "任务",
+    "iterations": "迭代",
     "jump to code": "跳转到代码",
     "just add new features": "只是增加新功能",
     "jvm process info": "进程信息",
@@ -1975,7 +1979,7 @@
     "your browser does not support WebSocket!": "您的浏览器不支持 WebSocket!",
     "{app}: {branch}, gets new pipelines {time}": "{app}: {branch}, 于 {time}发现了新流水线文件",
     "{num} followers": "{num} 人关注",
-    "{num} members are following": "{num} 位成员正在关注"
+    "{num} followers-ing": "{num} 位成员正在关注"
   },
   "ecp": {
     "Configuration": "配置集管理",
